# nvalchemi-toolkit

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude/skills/nvalchemi-data-storage/: SKILL.md
.claude/skills/nvalchemi-data-structures/: SKILL.md
.claude/skills/nvalchemi-dynamics-api/: SKILL.md
.claude/skills/nvalchemi-dynamics-hooks/: SKILL.md
.claude/skills/nvalchemi-dynamics-implementation/: SKILL.md
.claude/skills/nvalchemi-fine-tuning/: SKILL.md
.claude/skills/nvalchemi-loss-api/: SKILL.md
.claude/skills/nvalchemi-model-wrapping/: SKILL.md
.claude/skills/nvalchemi-reporting/: SKILL.md
.claude/skills/nvalchemi-training-api/: SKILL.md
.github/workflows/: ci.yml  weekly-examples.yml
docs/userguide/: data.md  dynamics_simulations.md  index.md  models.md  zarr_compression.md
docs/userguide/about/: contributing.md  conventions.md  install.md
examples/advanced/: 10_mace_training.py  10_vanilla_mace.yaml  _mace_models.py  _mace_training_helpers.py
nvalchemi/data/: atomic_data.py
nvalchemi/dynamics/_ops/: npt_nph.py
nvalchemi/dynamics/integrators/: nph.py  npt.py
nvalchemi/dynamics/optimizers/: fire2.py
nvalchemi/models/: _utils.py  dftd3.py  ewald.py  lj.py  mace.py  pipeline.py  pme.py
nvalchemi/models/_ops/: lj.py
test/dynamics/: test_npt_nph.py  test_ops.py
test/models/: test_base.py  test_dftd3.py  test_ewald.py  test_lj_model.py  test_mace.py  test_pipeline.py  test_pme.py  test_slab.py
